task320/src/main/java/com/example/task320/error/ApiError.java
package com.example.task320.error;

public record ApiError(String errorMessage, String errorCode) {}
